--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
 	"start":"lite-server",
     "tsc:watch": "tsc --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
