--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [18.x, 20.x, 22.x]
 
     steps:
     - uses: actions/checkout@v4
@@ -26,14 +26,11 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
-    - name: Clean before deployment
-      run: |
-        git clean -fdx
-        git reset --hard
-
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
-        force_orphan: true   # Optional: Force deployment even if branch history conflicts
+        publish_dir: ./  # Deploy from the root directory
+        destination_dir: .  # Ensure files deploy to the root of GitHub Pages
+        keep_files: true  # Preserve existing files
+        publish_branch: gh-pages  # Use the gh-pages branch for deployment
