--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,8 +3,6 @@ name: Build and Deploy to GitHub Pages
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 jobs:
   build:
@@ -26,11 +24,16 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
+    - name: Prepare deployment files
+      run: |
+        mkdir -p gh-pages
+        cp index.html gh-pages/
+        cp -R dist/ gh-pages/dist/
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./  # Deploy from the root directory
-        destination_dir: .  # Ensure files deploy to the root of GitHub Pages
-        keep_files: true  # Preserve existing files
-        publish_branch: gh-pages  # Use the gh-pages branch for deployment
+        publish_dir: gh-pages
+        publish_branch: gh-pages
+        keep_files: false
