--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [22.x]
 
     steps:
     - uses: actions/checkout@v4
@@ -23,10 +23,6 @@ jobs:
 
     - run: npm ci
     - run: npm run build --if-present
-
-    - name: List files for debugging
-      run: |
-        ls -R
 
     - name: Prepare deployment files
       run: |
